--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,10 @@ background-color: #8E929C!important;
   height: 100px;
 }
 
-.product-description{
-  height: 60px !important;
+.product-description {
+  height: 90px !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
 }
 
 .text-grays{
@@ -269,6 +271,25 @@ padding: 10px 0;
   width: 200px !important;
   color: #fff !important;
 }
+
+.imgur-social-icons{
+  cursor: pointer;
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-image: var(--bs-navbar-toggler-icon-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  /* Change background color to red */
+  background-color: red;
+}
+
+
 
 @media (max-width: 768px) {
 #tagContainer{
