--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,11 @@ color: #AED8EA;
 font-size: 1.5rem !important;
 }
 
+.custom-footer {
+  background-color: #474a50; /* Light yellow color */
+}
+
+
 .post-bk {
   background: #474a51;
   color: #fff;
