--- a/src/App.css
+++ b/src/App.css
@@ -472,7 +472,7 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
-  background-color: green;
+  background-color: blue;
 }
 
 .nav-icons {
