--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,19 @@ a {
   text-decoration: none;
 }
 
+.cover-name {
+  font-size: 52px;
+  color: #fff;
+  margin: 0;
+  font-family: "Proxima Nova ExtraBold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.Cover-stats {
+  text-align: center;
+  font-size: 16px;
+  margin: 13px 0 20px 0;
+}
+
 .gallery-title {
   font-size: 24px;
 }
