--- a/src/App.css
+++ b/src/App.css
@@ -452,7 +452,7 @@ a {
 
 .create-post-form .form-control {
   background-color: transparent !important;
-  color: #5B5D67 !important;
+  /* color: #5B5D67 !important; */
 }
 
 .create-post-form .description {
@@ -463,6 +463,14 @@ a {
 
 .description::placeholder {
   color: #E0E0E0 !important;
+}
+
+.title{
+  font-family: "Proxima Nova Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 35px !important;
+  min-height: 35px !important;
+  color: #fff !important;
+  display: block !important;
 }
 
 .title::placeholder {
