--- a/src/App.css
+++ b/src/App.css
@@ -442,6 +442,14 @@ a {
   background-size: cover;
 }
 
+.popular-posts {
+  background-image: url("./images/R1dEESs.png");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .new-post {
   background-color: #8E929C !important;
 }
@@ -481,7 +489,8 @@ a {
 .tags {
   border: 1px solid black !important;
   width: 200px !important;
-  color: #fff !important;
+  /* color: #fff !important; */
+  color: #5B5D67 !important;
 }
 
 .imgur-social-icons {
@@ -645,7 +654,7 @@ a {
 }
 
 @media (max-width: 768px) {
-  #tagContainer {
+  #tagContainer, #postContainer {
     display: none;
   }
 }
