--- a/src/App.css
+++ b/src/App.css
@@ -458,10 +458,17 @@ a {
   gap: 10px;
 }
 
-.create-post-form .form-control {
+.create-post-form .title {
   background-color: transparent !important;
   /* color: #5B5D67 !important; */
+  font-size: 28px;
+    font-family: "Proxima Nova Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 35px;
+    min-height: 35px;
+    color: #fff;
+    display: block;
 }
+    
 
 .create-post-form .description {
   background-color: #44474E !important;
@@ -470,6 +477,16 @@ a {
 }
 
 .description::placeholder {
+  color: #E0E0E0 !important;
+}
+
+/* Forces dark background and white text for dropdown items in most browsers */
+select.form-control option {
+  background-color: #343a40; /* Bootstrap dark */
+  color: white;
+}
+
+.create-new-tag::placeholder {
   color: #E0E0E0 !important;
 }
 
@@ -487,7 +504,7 @@ a {
 }
 
 .tags {
-  border: 1px solid black !important;
+  border: 1px solid white !important;
   width: 200px !important;
   /* color: #fff !important; */
   color: #5B5D67 !important;
